réorganisation fichiers sources
réorganisation fichiers sources en dossiers, regroupement composantVue et composantModel

--- a/LibrairieDeComposants/Calendrier/Component/calendrier/Calendrier.razor
+++ b/LibrairieDeComposants/Calendrier/Component/calendrier/Calendrier.razor
@@ -4,6 +4,7 @@
 @using LibrairieDeComposants.Calendrier.Services;
 @using System.Net.Http;
 @using DAL;
+@using LibrairieDeComposants.Calendrier.Component.semaine;
 
 
 @inject IJSRuntime JSRuntime
