--- a/LibrairieDeComposants/Calendrier/Component/semaine/Semaine.razor
+++ b/LibrairieDeComposants/Calendrier/Component/semaine/Semaine.razor
@@ -1,4 +1,5 @@
 ﻿@using Models;
+@using LibrairieDeComposants.Calendrier.Component.jour;
 <div class="row">
     @foreach (var jour in semaine.Jours)
     {
