--- a/LibrairieDeComposants/Jour.razor
+++ b/LibrairieDeComposants/Jour.razor
@@ -9,12 +9,19 @@
         </div>
 
         <div class="col-sm-12 h-75">
-            @foreach (var note in jour.Notes)
+            @*@foreach (var note in jour.Notes)
+        {
+            <div class="col-sm-12">
+                <p class="note">@(note.Note)</p>
+            </div>
+        }*@
+            @if(jour.Notes.Count > 0)
             {
                 <div class="col-sm-12">
-                    <p class="note">@(note.Note)</p>
+                    <p class="note">Notes :@(jour.Notes.Count)</p>
                 </div>
             }
+
             <span class="align-bas text-sm-right">@jour.Jour.ToString(EtatCalendrier.DateFormat, EtatCalendrier.Culture)</span>
         </div>
     </div>
