Créations d'utilisateurs avec groupes par défaut
Créer les utilisateurs en les assignants à un groupe "par defaut" automatiquement.

Ajouter : la création de groupes.
               la séléction des groupes dans
                   mon profil
                un filtre par groupes à
                   l'affichage des notes

--- a/Calendrier/Pages/Login.razor
+++ b/Calendrier/Pages/Login.razor
@@ -92,6 +92,7 @@
             if (store.LogIn(utilisateur.Login, utilisateur.MotDePasse))
             {
                 EtatCalendrier.CurrentUser = store.GetUtilisateur(utilisateur.Login, utilisateur.MotDePasse);
+                EtatCalendrier.DefinirGroupeParDefault();
                 AfficheErreurConnexion(false);
                 AfficheErreurCreation(false);
                 MyNavigationManager.NavigateTo("calendrier");
