--- a/Calendrier/Pages/EditAccount.razor
+++ b/Calendrier/Pages/EditAccount.razor
@@ -20,26 +20,22 @@
 
     @if (EtatCalendrier.CurrentUser != null)
     {
-
-        @*<div class="row"><h1>Paramètres de mon compte</h1></div>*@
-
         <div class="row">
 
             <div class="card border-dark mb-3 text-center" style="width: 100%;">
                 <div class="card-header">Paramètres de mon compte</div>
                 <div class="card-body text-dark">
                     <h5 class="card-title">Login : @(EtatCalendrier.CurrentUser.Login)</h5>
+                    <hr />
                     <div class="col d-flex justify-content-center">
-                        <span>
-                            <h5 class="card-title">Avatar : </h5>
-                            <img src="@(EtatCalendrier.CurrentUser.ProfilImage)" style="width: 100%;">
-                        </span>
+                        <h5 class="card-title">Avatar : <img src="@(EtatCalendrier.CurrentUser.ProfilImage)"></h5>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <span>
                             <h5 class="card-title">Séléctionner un nouvel avatar : </h5>
                         </span>
                     </div>
+                    <hr />
                     <div class="row">
                         @foreach (var fileinfo in files)
                         {
@@ -50,12 +46,33 @@
                                        @onchange="RadioSelection"
                                        checked=@(RadioValue.Equals(EtatCalendrier.CurrentUser.ProfilImage,StringComparison.OrdinalIgnoreCase))
                                        style="visibility: hidden;">
-                                <label for="@(fileinfo)"><img src="/Images/Icons/Avatar/@(fileinfo)" alt="I'm sad" /></label>
+                                <label for="@(fileinfo)"><img src="/Images/Icons/Avatar/@(fileinfo)" alt="avatar" /></label>
 
                             </div>
                         }
                     </div>
-                </div>
+                    <hr />
+                    <div class="row">
+                        <div class="col d-flex justify-content-end mt-1">
+                            <span>
+                                <h5 class="card-title">Créer un groupe :</h5>
+                            </span>
+                        </div>
+                        <div class="col d-flex justify-content-start">                        
+                            <div class="row">
+                                <div class="form-row align-items-center">
+                                    <label class="sr-only" for="nom-groupe">Nom du groupe</label>
+                                    <div class="input-group mb-2 mr-sm-2">
+                                        <input type="text" class="form-control" id="nom-groupe" placeholder="Nom du groupe" @bind="nomGroupe">
+                                        <div class="input-group-prepend ">
+                                            <div class="input-group-text"><button type="button" class="btn btn-sm btn-dark float-right pb-0 pt-0" @onclick="CreerGroupe">Créer : <span class="material-icons" style="font-size:1em;">done_outline</span></button></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
             </div>
         </div>
 
@@ -76,6 +93,7 @@
     private List<String> files;
     private String avatarFolder = "\\Images\\Icons\\Avatar";
     private String avatarFolderWeb = "/Images/Icons/Avatar/";
+    private String nomGroupe;
 
     protected override async Task OnParametersSetAsync()
     {
@@ -107,4 +125,25 @@
         store.SaveUserPicture(EtatCalendrier.CurrentUser);
 
     }
+
+    void CreerGroupe()
+    {
+        if (!String.IsNullOrWhiteSpace(nomGroupe) && nomGroupe.Length > 3)
+        {
+            EtatCalendrier.CreerGroupe(nomGroupe);
+        }
+    }
+
+    //void KeyPressedEvent(KeyboardEventArgs eventArgs)
+    //{
+    //    if (eventArgs.Key == "Enter")
+    //    {
+    //        CreerGroupe();
+    //    }
+    //    if (eventArgs.Key == "Escape")
+    //    {
+    //        nomGroupe = String.Empty;
+    //    }
+    //    this.StateHasChanged();
+    //}
 }
